simplified vthread code

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-27 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed flaws in vthread code.
+
 	* Changed documentation structure.
 
 2010-08-26 : Christian Mauduit <ufoot@ufoot.org>
