New sounds by Philippe Michael Groarke.

--- a/liquidwar6/data/snd/ogg/sound/README
+++ b/liquidwar6/data/snd/ogg/sound/README
@@ -1,4 +1,8 @@
-Sounds recorded by Kasper Hviid.
+Sounds alienfrenzy.ogg expl2.ogg glassdoppler.ogg powerup.ogg recorded by Kasper Hviid.
 
 http://lists.gnu.org/archive/html/help-liquidwar6/2009-01/msg00001.html
+
+Sound fanfare.ogg composed by Tim Chadburn.
+
+Sounds endbell-high.ogg endbell-long.ogg endbell-low.ogg menuselect.ogg menuvalid.ogg teamdie.ogg by Philippe Michael Groarke.
 
