--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-27 : Christian Mauduit <ufoot@ufoot.org>
 
+	* New sounds by	Philippe Michael Groarke.
+
 	* Fixed flaws in vthread code.
 
 	* Changed documentation structure.
