--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -137,3 +137,78 @@ is over. This one will returned an int converted with @code{lw6sys_atoi}.
 @strong{Return value:}  a string, must not be freed.
 @end deftypefun
 
+@deftypefun {int} {lw6msg_word_first} (lw6msg_word_t * @var{word}, char ** @var{next}, char * @var{msg})
+@var{word}:  will contain the parsed word
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message and gets the first word. This word is put in @code{buf} member
+with its length. @code{next} is usefull if you want to parse the rest of the message,
+it points at the beginning of it.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_word_first_int} (int * @var{parsed_value}, char ** @var{next}, char * @var{msg})
+@var{parsed_value}:  will contain the parsed value
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message, gets the first word and interpret it as an int.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_word_first_int_gt0} (int * @var{parsed_value}, char ** @var{next}, char * @var{msg})
+@var{parsed_value}:  will contain the parsed value
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message, gets the first word and interpret it as an int.
+The value must be strictly greater than 0.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_word_first_id_16} (u_int16_t * @var{parsed_value}, char ** @var{next}, char * @var{msg})
+@var{parsed_value}:  will contain the parsed value
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message, gets the first word and interpret it as an 16-bit id.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_word_first_id_32} (u_int32_t * @var{parsed_value}, char ** @var{next}, char * @var{msg})
+@var{parsed_value}:  will contain the parsed value
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message, gets the first word and interpret it as an 32-bit id.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_word_first_id_64} (u_int64_t * @var{parsed_value}, char ** @var{next}, char * @var{msg})
+@var{parsed_value}:  will contain the parsed value
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message, gets the first word and interpret it as an 64-bit id.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
