--- a/liquidwar6/data/snd/ogg/sound/README
+++ b/liquidwar6/data/snd/ogg/sound/README
@@ -4,5 +4,5 @@ http://lists.gnu.org/archive/html/help-liquidwar6/2009-01/msg00001.html
 
 Sound fanfare.ogg composed by Tim Chadburn.
 
-Sounds endbell-high.ogg endbell-long.ogg endbell-low.ogg menuselect.ogg menuvalid.ogg teamdie.ogg by Philippe Michael Groarke.
+Sounds endbell-high.ogg endbell-long.ogg endbell-low.ogg menuselect.ogg menuvalid.ogg teamdie.ogg programstart.ogg by Philippe Michael Groarke.
 
